Changes background image position

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-position: center center;
     display: flex;
     align-items: center;
     justify-content: center;
